@@ -1,3 +1,8 @@
+2004-01-14  Shiro Kawai  <shiro@acm.org>
+
+	* src/kahua/server.scm (kahua-default-handler): passes path-info
+	  to the handling procedure using the context ("x-kahua-path-info").
+
 2004-01-13  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua/dbm.scm, test/kahua-dbm.scm : added a module that
